back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
