back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  selector:
    app: back
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
