front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: front
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
